# mindctrl

./: .gitignore  README.md  hacs.json  repository.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-entrypoint.sh
docs/: azureml.md  evaluation.md  prompt-management.md  prompt-techniques.md
mindctrl-addon/: Dockerfile  build.yaml  config.yaml  requirements.txt  test-requirements.txt  utils.py.patch
mlflow-addon/: Dockerfile  build.yaml  config.yaml  requirements.txt
mlflow-gateway/: Dockerfile  build.yaml  config.py  config.yaml  requirements.txt  route-config.yaml  run.sh
mlflow-tracking/: Dockerfile  Dockerfile.aarch64  build.yaml  config.yaml  requirements.txt  run.sh
python/: README.md  pyproject.toml
python/src/mindctrl/: Dockerfile  cli.py  config.py  const.py  main.py  mlflow_bridge.py  mlmodels.py  mqtt.py  rag.py  replay_server.py
python/src/mindctrl/contracts/: websocket.py
python/src/mindctrl/db/: queries.py  setup.py
python/src/mindctrl/db/models/: summary_data.py
python/src/mindctrl/homeassistant/: client.py  messages.py
python/src/mindctrl/openai_deployment/: __init__.py
python/src/mindctrl/routers/: deployed_models.py  info.py  ui.py
python/src/mindctrl/templates/: index.html
python/src/mindctrl/tools/: functions.py
python/src/mindctrl/workflows/: __init__.py  agent.py  deployer.py
python/tests/: test_hass_api.py  test_hass_client.py  test_mlflow.py  test_replay_server.py  test_workflows.py
python/tests/test_data/: test_log_tool_calling-input.json  test_summarize-input.json
scripts/: build_apps.sh  check_k3d.sh  (+5 more)
(+94 files in other folders)
